--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -1557,6 +1557,18 @@ html.dark .optimize-video-card:hover {
                 <div class="preview-features">
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
+                        <span>Trend Finder</span>
+                    </div>
+                    <div class="preview-feature">
+                        <i class="ph ph-check-circle"></i>
+                        <span>Keyword Research</span>
+                    </div>
+                    <div class="preview-feature">
+                        <i class="ph ph-check-circle"></i>
+                        <span>Competitors Analysis</span>
+                    </div>
+                    <div class="preview-feature">
+                        <i class="ph ph-check-circle"></i>
                         <span>Hook Generator</span>
                     </div>
                     <div class="preview-feature">
@@ -1565,19 +1577,7 @@ html.dark .optimize-video-card:hover {
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
-                        <span>Trending Sounds Finder</span>
-                    </div>
-                    <div class="preview-feature">
-                        <i class="ph ph-check-circle"></i>
-                        <span>Trend Tracker</span>
-                    </div>
-                    <div class="preview-feature">
-                        <i class="ph ph-check-circle"></i>
                         <span>Performance Analytics</span>
-                    </div>
-                    <div class="preview-feature" style="visibility: hidden;">
-                        <i class="ph ph-check-circle"></i>
-                        <span>&nbsp;</span>
                     </div>
                 </div>
             </div>
