--- a/app/templates/tiktok/titles_hashtags.html
+++ b/app/templates/tiktok/titles_hashtags.html
@@ -286,9 +286,9 @@
                     <i class="ph ph-house"></i>
                     Back to Dashboard
                 </a>
-                <a href="{{ url_for('trending_sounds.trending_sounds') }}" class="btn-secondary">
-                    <i class="ph ph-music-notes"></i>
-                    Explore Sounds
+                <a href="{{ url_for('trend_finder.trend_finder') }}" class="btn-secondary">
+                    <i class="ph ph-trend-up"></i>
+                    Discover Trends
                 </a>
             </div>
         </div>
