--- a/app/templates/tiktok/competitors.html
+++ b/app/templates/tiktok/competitors.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}TikTok Competitor Analysis - Track & Analyze Competitors | Creatrics{% endblock %}
+{% block title %}Competitor Analysis - Track & Analyze Competitors | Creatrics{% endblock %}
 
 {% block seo_meta %}
 <meta name="description" content="Analyze TikTok competitors, track trending content, and discover winning strategies. Get actionable insights to grow your account with competitor intelligence.">
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block additional_styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/competitors.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/tiktok_competitors.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
             <div class="header-content">
                 <h1 class="page-title">
                     <i class="ph ph-users-three"></i>
-                    <span>TikTok Competitor Analysis</span>
+                    <span>Competitor Analysis</span>
                 </h1>
             </div>
         </div>
