--- a/app/templates/tiktok/hook_generator.html
+++ b/app/templates/tiktok/hook_generator.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="TikTok hook generator, viral video hooks, video opener, TikTok hooks, content hooks, AI hook generator">
 {% endblock %}
 
-{% block title %}AI TikTok Hook Generator - Create Viral Video Hooks | Creatrics{% endblock %}
+{% block title %}AI Hook Generator - Create Viral Video Hooks | Creatrics{% endblock %}
 
 {% block additional_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/hook_generator.css') }}">
@@ -19,7 +19,7 @@
         <div class="generator-header">
             <h1 class="generator-title">
                 <i class="ph ph-fish-simple"></i>
-                TikTok Hook Generator
+                Hook Generator
             </h1>
         </div>
 
