--- a/app/templates/tiktok/keyword_research.html
+++ b/app/templates/tiktok/keyword_research.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block additional_styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/trend_finder.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/tiktok_keyword_research.css') }}">
 {% endblock %}
 
 {% block content %}
